Fixed the spacing on the index page

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -267,7 +267,7 @@ select {
 }
 
 .vibe {
-  margin: 30px 0px 0px 0px;
+  margin: 100px 0px 0px 0px;
 }
 
 .poll {
